# DistributedDiningPhilosophers

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cutlery.dockerfile  docker-compose.yaml  native.sh  philosopher.dockerfile  waiter.dockerfile
.github/workflows/: rdt.yml
cutlery/: .env.template  Cargo.toml
cutlery/src/: main.rs
docs/: RDT.tex  structure.md
docs/chapters/: 020_aufgabenstellung.tex  030_anforderungen.tex  040_entwurf.tex  050_rpc.tex  060_logik.tex  070_analyse.tex
docs/images/: philosoph.uxf  rpc.uxf  rpc_abstrahiert.uxf  setup.uxf  waiter_job.uxf
frontend/: Performance_log.txt  bun.lockb  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
philosopher/: .env.template  Cargo.toml
philosopher/src/: main.rs  svc.rs
shared_menu/: Cargo.toml
shared_menu/src/: calls.rs  calls_test.rs  lib.rs  node.rs  node_test.rs  puppet.rs  random_names.rs  restaurant.rs  restaurant_test.rs  seat.rs  states.rs  status.rs
waiter/: .env.template  Cargo.toml
waiter/src/: http.rs  main.rs
