[package]
name = "cutlery"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
shared_menu = { path = "../shared_menu" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dotenv = "0.15"#
reqwest = "0.12.9"