[package]
name = "waiter"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_menu = { path = "../shared_menu" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.134"
